Fixed some overflow issues.

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
+    overflow: hidden;
     flex-direction: column;
     font-size: 14px;
     vertical-align: baseline;
@@ -24,6 +25,7 @@ body {
 
 #draw-space {
     position: absolute;
+    z-index: -1;
 }
 
 .grid_box {
