--- a/css/output-formatting.css
+++ b/css/output-formatting.css
@@ -3,6 +3,7 @@
     width: 100%;
     min-height: 150px;
     flex: 1;
+    background-color: white;
     border-top: 1px solid black;
     box-sizing: border-box;
     overflow-y: scroll;
